# circade

./: me.alexholt.Circade.json  run-web.sh
.github/workflows/: codeql.yml
circade-server/: .env.sample  README.md  db.js  index.js  package-lock.json  package.json
data/: me.alexholt.Circade.gschema.xml
design/: mockup.sketch
desktop-client/: me.alexholt.Circade.json  meson.build
desktop-client/data/: me.alexholt.Circade.appdata.xml.in  me.alexholt.Circade.desktop.in  meson.build
desktop-client/po/: meson.build
desktop-client/src/: circade-cookie-jar.h  circade-window.c  circade-window.h  circade-window.ui  main.c
po/: POTFILES
server/: .env.sample  db.js  email.js  index.js  package-lock.json  package.json  password-validator.js  rsa.key
server/email-example/: destination.json  send-email-example.sh
server/sql/: create.sql
server/tests/: api.test.js
src/: circade-cookie-jar.c  circade-window.c  circade-window.h  circade-window.ui  circade.gresource.xml  meson.build
web-client/: .env.sample  package-lock.json  package.json  postcss.config.js  serve.json  webpack.config.js
web-client/src/: index.html  index.js
web-client/src/css/: base.css  calendar.css  color.css  index.css  layout.css  login-page.css  notepad.css  typography.css
web-client/src/js/: account-creation-page.js  app.js  blank-note.js  calendar.js  check-pretty.js  easy-fetch.js  login-page.js  note.js  notepad.js  svgator.js
